--- a/src/main.html
+++ b/src/main.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous">
+    </script>
+    <!-- <script src="https://cdn.bootcss.com/lodash.js/4.17.15/lodash.core.js"></script> -->
     <title>George HTML</title>
 </head>
 
 <body>
     <div id="dmo">我是模板文件的内容</div>
     <div class="box">
-        box
+        box222333222sss
     </div>
 </body>
 
